Fix wp attributes group alignment: Add clear
Bug # 17518

--- a/app/assets/stylesheets/content/work_package_details/_overview_tab.sass
+++ b/app/assets/stylesheets/content/work_package_details/_overview_tab.sass
@@ -26,6 +26,9 @@
 // See doc/COPYRIGHT.rdoc for more details.
 //++
 
+.detail-panel-attributes-group
+  clear: both
+
 .detail-panel-description,
 .detail-panel-attributes
   h3
